Добавить hibernate и дто классы